--- a/notes/241002.introduction/241002.introduction.md
+++ b/notes/241002.introduction/241002.introduction.md
@@ -4,7 +4,9 @@ layout: home
 parent: Notes
 ---
 
-# Note 1
+# Note 1: Introduction
+
+- <https://www.cs.sjtu.edu.cn/~qyin/teaching/db2024/Lec1-Intro.pdf>
 
 ## DBS
 
@@ -12,7 +14,7 @@ parent: Notes
 - **Database management system (DBMS)**: a software system that facilitates the creation, maintenance and uses of databases.
 - **Database system**: DBMS + Database
 
-![](DBS.png)
+![](./attachments/DBS.png)
 
 ## Flat File
 
@@ -37,7 +39,7 @@ parent: Notes
 	- Concurrency control for high throughput transactions.
 	- **Resilient** to system failures.
 
-![](DBMS.png)
+![](./attachments/DBMS.png)
 
 ## Relational Databases
 
@@ -86,7 +88,7 @@ parent: Notes
 	- A relational schema: `Artists(ID, Artist, Year, City)`. 
 	- Below is an instance for the schema `Artists(ID, Artist, Year, City)`.
 
-![](artists.png)
+![](./attachments/artists.png)
 
 ## Database Schema vs. Database Instance
 
@@ -96,7 +98,7 @@ parent: Notes
 	- `ArtistAlbum (Artist_ID, Album_ID)`
 - Database Instance
 
-![](DB_instance.png)
+![](./attachments/DB_instance.png)
 
 ## Keys
 
@@ -108,13 +110,13 @@ parent: Notes
 - A primary key is a **designated** candidate key of a relation.
 - Some DBMSs automatically create an **internal primary key** if we don’t define one.
 
-![](primary_key.png)
+![](./attachments/primary_key.png)
 
 ## Foreign Key
 
 - A **foreign key** specifies that a tuple from one relation must map to a tuple in another relation.
 
-![](foreign_key.png)
+![](./attachments/foreign_key.png)
 
 - Foreign key constraint
 	- The referencing attribute(s) must be the **primary key** of the referenced relation.
@@ -122,7 +124,7 @@ parent: Notes
 	- Referencing attributes: Artist_ID, Album_ID
 	- Referenced relations: Artist, Album
 
-![](foreign_key_constraint.png)
+![](./attachments/foreign_key_constraint.png)
 
 ---
 
