--- a/notes/241002.introduction/241002.introduction.md
+++ b/notes/241002.introduction/241002.introduction.md
@@ -24,7 +24,8 @@ parent: Notes
 
 ## The Relational Revolution
 
-- [Edgar F. Codd](https://en.wikipedia.org/wiki/Edgar_F._Codd) proposed the **relational data model** in 1970.
+- [Edgar F. Codd](https://en.wikipedia.org/wiki/Edgar_F._Codd) (Edgar Frank Codd) proposed the **relational data model** in 1970.
+- The most successful database abstraction
 	1. Store database in simple data structures
 	2. Access data through high-level language
 	3. Physical storage left up to implementation
@@ -118,11 +119,11 @@ parent: Notes
 
 ![](./attachments/foreign_key.png)
 
-- Foreign key constraint
+- **Foreign key constraint**
 	- The referencing attribute(s) must be the **primary key** of the referenced relation.
-	- Referencing relation: ArtistAlbum
-	- Referencing attributes: Artist_ID, Album_ID
-	- Referenced relations: Artist, Album
+	- **Referencing relation**: ArtistAlbum
+	- **Referencing attributes**: Artist_ID, Album_ID
+	- **Referenced relations**: Artist, Album
 
 ![](./attachments/foreign_key_constraint.png)
 
