--- a/notes/241002.relational_algebra/241002.relational_algebra.md
+++ b/notes/241002.relational_algebra/241002.relational_algebra.md
@@ -28,6 +28,13 @@ $$
 $$
 
 - $$R$$ is the input relation and $$p$$ is the selection predicate (or condition).
+- e.g.
+	- The following operation $$\sigma_{dept\_name=
+	"Physics"}(instructor)$$ get all the instructors in the Physics department.
+- Boolean connectives `=`, `≠`, `<`, `⩽`, `>` and `⩾` are allowed in predicates.
+- Combine predicates with **logical connectives** `∧` (and), `∨` (or), `¬` (not).
+- e.g.
+	- $$\sigma_{dept\_name}="Physics"$$
 
 ## Projection
 
