--- a/notes/241003.e-r_model/241003.e-r_model.md
+++ b/notes/241003.e-r_model/241003.e-r_model.md
@@ -1,14 +1,53 @@
 ---
-title: "Note 3: E-R Model"
+title: "Note 3: Entity-Relationship (ER) Model"
 layout: mathjax
 parent: Notes
 ---
 
-# Note 3: E-R Model
+# Note 3: Entity-Relationship (ER) Model
 
-- <https://www.cs.virginia.edu/~up3f/cs4750/slides/4750meet04-ER-intro.pdf>
+- **<https://www.cs.virginia.edu/~up3f/cs4750/slides/4750meet04-ER-intro.pdf>**
+- **<https://www.cs.virginia.edu/~up3f/cs4750/slides/4750meet05-ER.pdf>**
+- **<https://www.cs.virginia.edu/~up3f/cs4750/slides/4750meet06-07-ER.pdf>**
 - <https://codex.cs.yale.edu/avi/db-book/slides-dir/PDF-dir/ch6.pdf>
 - <https://cs.gmu.edu/~jessica/cs450_s12/cs450_ER1.pdf>
+
+## E-R diagram
+
+- **E-R diagram**: high-level design model representing a database as a **collection of entities and relationships** among entities
+- **Entity**: ~an object (thing to keep track to run the business)
+- **Entity set**: ~a class (~table, a collection of things of the same kind)
+- **Instance** ~actual occurrence of the entity (~row in a table)
+- **Attribute** ~ a field (property of the entities in that set)
+
+## Attributes
+
+- **Single-valued attribute** – allows a single value
+- **Multi-valued attribute** – allows multiple values at the same time
+- **Derived attribute** –can be calculated from one or more attributes
+- **Composite attribute**
+	- consists of multiple values
+	- can have as many levels as needed
+
+## Relationships
+
+- Connections among two or more entity sets
+- **Binary relationships** – connections between two entity sets
+- **Multi-way relationships (u-ary)** – connections involving more than two entity sets
+
+## Binary Relationships
+
+- If A and B are sets, a relationship R is a subset of A X B
+- Cardinality (or Multiplicity)
+	- A binary relationship can connect any member of one of its entity sets to any number of members of the other entity set
+
+![](Cardinality.png)
+
+## Total Participation
+
+- **Total participation** – all entities in an entity set **must** participate in the relationship
+
+
 
 ---
 
