--- a/books/bk.数据库原理与应用/数据库原理与应用.md
+++ b/books/bk.数据库原理与应用/数据库原理与应用.md
@@ -7,7 +7,7 @@ parent: Books
 
 <div>
 	<a href="https://www.ryjiaoyu.com/book/details/43862">
-		<img src="https://img9.doubanio.com/view/subject/l/public/s34138325.jpg" style="height: 200px;">
+		<img src="cover.jpg" style="height: 200px;">
 	</a>
 </div>
 
