--- a/notes/241003.e-r_model/241003.e-r_model.md
+++ b/notes/241003.e-r_model/241003.e-r_model.md
@@ -12,6 +12,12 @@ parent: Notes
 - <https://codex.cs.yale.edu/avi/db-book/slides-dir/PDF-dir/ch6.pdf>
 - <https://cs.gmu.edu/~jessica/cs450_s12/cs450_ER1.pdf>
 
+- 实体：矩形
+- 联系：菱形
+- 属性：椭圆形
+- 主键属性：下划线
+- 实体与联系之间：线条
+
 ## E-R diagram
 
 - **E-R diagram**: high-level design model representing a database as a **collection of entities and relationships** among entities
