--- a/notes/241003.e-r_model/241003.e-r_model.md
+++ b/notes/241003.e-r_model/241003.e-r_model.md
@@ -53,8 +53,172 @@ parent: Notes
 
 - **Total participation** – all entities in an entity set **must** participate in the relationship
 
+## https://cs.gmu.edu/~jessica/cs450_s12/cs450_ER1.pdf
 
+### The Entity-Relationship Model
+
+The **E-R** (entity-relationship) data model views the real world as a set of basic **objects** (entities) and **relationships** among these objects.
+
+It is intended primarily for the DB design process by allowing the specification of an **enterprise scheme**. This represents the overall logical structure of the DB.
+
+### Entities and Entity Sets
+
+- An **entity** is an object that exists and is distinguishable from other objects. For instance, Michelle Lee with S.S.N. 890-12-3456 is an entity, as she can be uniquely identified as one particular person in the universe.
+- An entity may be **concrete** (a person or a book, for example) or **abstract** (like a holiday or a disease).
+- An **entity set** is a set of entities of the same type (e.g., all persons having an account at a bank).
+- Entity sets **need not be disjoint**. For example, the entity set *Student* (all students in a university) and the entity set *professor* (all professors in a university) may have members in common. (i.e a computer science professor might take a class in anthropology).
+- An entity is represented by a set of **attributes**. (e.g. *name*, *SSN*, *Phone-Num* for “customer” entity.)
+- The **domain** of the attribute is the set of permitted values (e.g. the telephone number must be ten positive integers).
+- Formally, an attribute is a **function** which maps an entity set into a domain.
+- Every entity is described by a set of (attribute, data value) pairs. There is one pair for each attribute of the entity set.
+- e.g. a particular *student* entity is described by the set `{(name, Lee), (SSN, 890-123-456), (street, Blaine), (city, Riverside)}`.
+
+### E-R diagrams
+
+We can express the overall logical structure of a database **graphically** with an E-R diagram.
+
+Its components are:
+- **rectangles** representing entity sets.
+- **ellipses** representing attributes.
+- **diamonds** representing **relationship** sets.
+- **lines** linking attributes to entity sets and entity sets to relationship sets.
+
+![](./attachments/students.png)
+
+> Note that this is a poor example of a entity, since the name is represented as one attribute and there is no street number attribute. We will consider the problem of designing good entities later, here we are just concerned with explaining their graphical representation. Also note that one of the attributes is underlined, we will explain why later.
+
+![](./attachments/students_professor.png)
+
+> The “since” attribute in this example is called a descriptive attribute, since it describes the mapping from A to B
+
+### Key Constraints
+
+We can also use arrows to indicate **key constraints** (often simply referred to as **constraints**)
+
+Suppose the university has the following rule: **A student is allowed to be advised by at most one professor. However, a professor is allowed to advise more than one student.**
+
+This is an example of a **many-to-one constraints**, that is, many students can be advised by one professor, but each student can only have (at most) one advisor. We can represent this with an arrow as shown below.
+
+![](./attachments/key-constraints.png)
+
+- There are four possible **key constraints**, they express the number of entities to which another entity can be associated via a relationship. For binary relationship sets between entity sets A and B, the mapping cardinality must be one of:
+
+1. **One-to-one**: An entity in A is associated with at most one entity in B, and an entity in B is associated with at most one entity in A.
+2. **One-to-many**: An entity in A is associated with any number in B. An entity in B is associated with at most one entity in A.
+3. **Many-to-one**: An entity in A is associated with at most one entity in B. An entity in B is associated with any number in A.
+4. **Many-to-many**: Entities in A and B are associated with any number from each other.
+
+The appropriate **key constraint** for a particular relationship set depends on the real world being modeled.
+
+### Key Constraints: Examples
+
+- **One-to-one**: An entity in A is associated with at most one entity in B, and an entity in B is associated with at most one entity in A.
+- A man may be married to at most one woman, and a woman may be married to at most one man (both men and women can be unmarried)
+
+![](./attachments/men_women.png)
+
+- **One-to-many**: An entity in A is associated with any number in B. An entity in B is associated with at most one entity in A.
+- A woman may be the mother of many (or no) children. A person may have at most one mother.
+
+![](./attachments/womenclub.png)
+
+> Note that this example is not saying that Moe does not have a mother, since we know as a biological fact that everyone has a mother. It is simply the case that Moeʼs mom is not a member of the Womenʼs club.
+
+- **Many-to-one**: An entity in A is associated with at most one entity in B. An entity in B is associated with any number in A.
+- Many people can be born in any county, but any individual is born in at most one country.
+
+![](./attachments/born.png)
+
+> Note that we are not saying that the Sea Captain was not born in any country, he almost certainly was, we just donʼt know which country, or it is not in our Country entity set. Also note that we are not saying that no one was born in Ireland, it is just that no one in the Bowling Club was.
+
+- **Many-to-many**: Entities in A and B are associated with any number from each other.
+
+![](./attachments/boys.png)
+
+### Key Constraints Summary
+
+- The arrow positioning is simple once you get it straight in your mind, so do some examples. Think of the arrow head as pointing to the entity that “ one ” refers to.
+- Some people use the term “**Mapping Cardinalities**” or “**Multiplicity**” to refer to key constraints.
+
+### Participation Constraints
+
+Earlier, we saw an example of a one-to-one key constraint, noting that a man may be married to at most one woman, and a woman may be married to at most one man (both men and women can be unmarried).
+
+Suppose we want to build a database for the “Springfield Married Persons Association”. In this case *everyone* must be married! In database terms their participation must be **total**. (the previous case that allows unmarried people is said to have **partial** participation.)
+
+How do we represent this with ER diagrams?
+
+Participation Constraints are indicated by bold lines in ER diagrams.
+
+We can use bold lines (to indicate participation constraints), and arrow lines (to indicate key constraints) independently of each other to create an expressive language of possibilities.
+
+![](./attachments/men_women2.png)
+
+### More on Relations
+
+- Entities sets can be related to themselves.
+
+> We can annotate the **roles** played by the entities in this case. Suppose that we want to pair a mature student with a novice student...
+
+![](./attachments/students2.png)
+
+> When entities are related to themselves, it is almost always a good idea to indicate their roles.
+
+### Entity Attributes Revisited
+
+- What is the correct choice of attributes to represent height?
+	- Using two fields, one for *feet* the other for *inches* is probably the best solution if we are never going to do arithmetic on the height, and you need to report the height in a human intuitive way (dating agency).
+	- If we are going to do calculations on the data (i.e calculate the BMI) we would be much better off with just the height in inches. (medical records)
+
+### Entity versus Attribute
+
+Sometimes we have to decide whether a property of the world we want to model should be **an attribute of an entity**, or an **entity set which is related to the attribute by a relationship set**.
+
+A major advantage of the latter approach is that we can easily model the fact that a person can have multiple phones, or that a phone might be shared by several students. (attributes can not be set-valued)
+
+![](./attachments/stuphone.png)
+
+A classic example of a feature that is best modeled as a an entity set which is related to the attribute by a relationship set is an address.
+
+> Very bad choice for most applications. It would make it difficult to pretty print mailing labels, it would make it difficult to test validity of the data, it would make it difficult/impossible to do queries such as “how many students live in Fairfax?”
+
+> A better choice, but it only allows a student to have one address. Many students have a two or more address (i.e. a different address during the summer months) This method cannot handle this.
+
+The best choice for this problem
+
+![](./attachments/stuaddr.png)
+
+### Domains Revisited
+
+We already said…
+The **domain** of the attribute is the set of permitted values (e.g. the telephone number must be ten positive integers).
+
+Defining the correct **domain** for an attribute is an important skill.
+Making a mistake at this stage can cause huge problems later on.
+
+What is the **domain** for GENDER?
+- is it MALE, FEMALE, MIXED? (Olympics)
+- is it MALE, FEMALE, UNKNOWN? (Fossils)
+- is it MALE, FEMALE, DECLINE TO STATE? (Politically Correct)
+
+- What is the correct domain for GPA?
+- What is the correct domain for street address?
+- What is the correct domain for Phone Number? (What about foreign … )
+- What is the correct domain for Bank Account Balance?
+
+### Summary of Conceptual Design
+
+- ***Conceptual design*** follows ***requirements analysis***
+	- Yields a high-level description of data to be stored
+- ER model is popular for conceptual design
+	- Constructs are expressive, close to the way people think about their applications
+- Basic constructs:
+	- ***entities***,
+	- ***relationships***,
+	- ***attributes*** (of *entities* and *relationships*).
+- Constraints can be expressed
+- Note: There are many variations on ER model.
 
 ---
 
-Last Updated: Wed Oct  2 23:55:03 CST 2024
+Last Updated: Mon Oct  7 11:08:14 CST 2024
