--- a/notes/241003.e-r_model/241003.e-r_model.md
+++ b/notes/241003.e-r_model/241003.e-r_model.md
@@ -11,41 +11,6 @@ parent: Notes
 - **<https://www.cs.virginia.edu/~up3f/cs4750/slides/4750meet06-07-ER.pdf>**
 - <https://codex.cs.yale.edu/avi/db-book/slides-dir/PDF-dir/ch6.pdf>
 
-## E-R diagram
-
-- **E-R diagram**: high-level design model representing a database as a **collection of entities and relationships** among entities
-- **Entity**: ~an object (thing to keep track to run the business)
-- **Entity set**: ~a class (~table, a collection of things of the same kind)
-- **Instance** ~actual occurrence of the entity (~row in a table)
-- **Attribute** ~ a field (property of the entities in that set)
-
-## Attributes
-
-- **Single-valued attribute** – allows a single value
-- **Multi-valued attribute** – allows multiple values at the same time
-- **Derived attribute** –can be calculated from one or more attributes
-- **Composite attribute**
-	- consists of multiple values
-	- can have as many levels as needed
-
-## Relationships
-
-- Connections among two or more entity sets
-- **Binary relationships** – connections between two entity sets
-- **Multi-way relationships (u-ary)** – connections involving more than two entity sets
-
-## Binary Relationships
-
-- If A and B are sets, a relationship R is a subset of A X B
-- Cardinality (or Multiplicity)
-	- A binary relationship can connect any member of one of its entity sets to any number of members of the other entity set
-
-![](Cardinality.png)
-
-## Total Participation
-
-- **Total participation** – all entities in an entity set **must** participate in the relationship
-
 ## https://cs.gmu.edu/~jessica/cs450_s12/cs450_ER1.pdf
 
 ### The Entity-Relationship Model
@@ -252,9 +217,9 @@ In the example below…
 
 `VIN#` is the logical choice for **primary key**
 
-![](auto.png)
+![](./attachments/auto.png)
 
-![](auto2.png)
+![](./attachments/auto2.png)
 
 - The **primary key** is denoted in an ER diagram by underlining.
 - An entity that has a primary key is called a **strong entity**.
@@ -278,9 +243,9 @@ For this to work, two conditions must be met.
 - The weak entity set must have total participation in the relationship
 - The identifying owner and the weak entity must participate is a one-to-many relationship.
 
-![](course.png)
+![](./attachments/course.png)
 
-![](course-table.png)
+![](./attachments/course-table.png)
 
 ### Weak Entity Sets Example
 
@@ -288,7 +253,7 @@ For this to work, two conditions must be met.
 	- No team has two players with the same number.
 	- However, there can be players with the same number on different teams
 
-![](teams.png)
+![](./attachments/teams.png)
 
 ### Ternary Relationships
 
@@ -296,7 +261,7 @@ So far, we have only considered binary relationships, however it is possible to 
 
 Consider the following example that describes the fact that employees at a bank work in one or more bank branches, and have one or more job descriptions.
 
-![](ternary1.png)
+![](./attachments/ternary1.png)
 
 Sometimes you have a choice of a single ternary relationship or two binary relationships…
 
@@ -304,7 +269,7 @@ Sometimes you have a choice of a single ternary relationship or two binary relat
 > 
 > **FACT**: Every ternary (and higher order) relationship can be converted into a set of binary relationships.
 
-![](ternary.png)
+![](./attachments/ternary.png)
 
 ### Aggregation
 
@@ -346,5 +311,43 @@ ER design is subjective. There are often many ways to model a given scenario! An
 
 ---
 
-Last Updated: Mon Oct  7 12:04:52 CST 2024
+## E-R diagram
+
+- **E-R diagram**: high-level design model representing a database as a **collection of entities and relationships** among entities
+- **Entity**: ~an object (thing to keep track to run the business)
+- **Entity set**: ~a class (~table, a collection of things of the same kind)
+- **Instance** ~actual occurrence of the entity (~row in a table)
+- **Attribute** ~ a field (property of the entities in that set)
+
+## Attributes
+
+- **Single-valued attribute** – allows a single value
+- **Multi-valued attribute** – allows multiple values at the same time
+- **Derived attribute** –can be calculated from one or more attributes
+- **Composite attribute**
+	- consists of multiple values
+	- can have as many levels as needed
+
+## Relationships
+
+- Connections among two or more entity sets
+- **Binary relationships** – connections between two entity sets
+- **Multi-way relationships (u-ary)** – connections involving more than two entity sets
+
+## Binary Relationships
+
+- If A and B are sets, a relationship R is a subset of A X B
+- Cardinality (or Multiplicity)
+	- A binary relationship can connect any member of one of its entity sets to any number of members of the other entity set
+
+![](Cardinality.png)
+
+## Total Participation
+
+- **Total participation** – all entities in an entity set **must** participate in the relationship
+
+---
+
+Last Updated: Mon Oct  7 12:07:08 CST 2024
+
 
