--- a/notes/241003.e-r_model/241003.e-r_model.md
+++ b/notes/241003.e-r_model/241003.e-r_model.md
@@ -5,6 +5,13 @@ parent: Notes
 ---
 
 # Note 3: Entity-Relationship (ER) Model
+{: .no_toc }
+
+## Table of Contents
+{: .no_toc .text-delta }
+
+1. TOC
+{:toc}
 
 - **<https://www.cs.virginia.edu/~up3f/cs4750/slides/4750meet04-ER-intro.pdf>**
 - **<https://www.cs.virginia.edu/~up3f/cs4750/slides/4750meet05-ER.pdf>**
